# outlook-autoreply-helper

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-rc.yml  publish-rc.yml.in  publish.yml  publish.yml.in
outlook_autoreply_helper/: auth.py  command.py  settings.py  util.py
src/outlook_autoreply_helper/: settings.py
