[project]
name = "outlook-autoreply-helper"
version = "0.1.0"
description = "A Python helper library to automatically manage Outlook auto-reply settings via the Microsoft Graph API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "msal==1.31.0",
  "msal_extensions==1.2.0",
  "requests==2.32.3",
  "pydantic==2.9.2",
  "jinja2==3.1.4",
  "azure-keyvault-secrets==4.9.0",
  "azure-identity==1.19.0",
  "pydantic_settings==2.6.1",
]

[dependency-groups]
dev = [
  "pytest = >=7.3.1,<8.3.0",
  "pytest-mock = >=3.11.1,<3.15.0",
  "pytest-cov = >=4.1,<5.1",
  "pre-commit = >=3.3.3,<3.8.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.9.
target-version = "py310"


[lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Unlike Flake8, default to a complexity level of 10.
mccabe = 10
